[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["smwatertd <korablev.danil.smtd@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
flask-sqlalchemy = "^3.1.1"
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
flake8-builtins = "^2.1.0"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.3.2"
flake8-pyproject = "^1.2.3"
flake8-comprehensions = "^3.14.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src",
  ".",
]

[tool.flake8]
show-source = true
statistics = false
doctests = true

max-line-length = 120
blank-line-before-imports = 2
max-complexity = 4
inline-quotes = "single"
accept-encodings = "utf-8"
isort-show-traceback = true

exclude = [
  ".git",
  ".venv",
  "migrations",
  "__pycache__",
]

per-file-ignores = [
  "models.py: A003",
  "serializers.py: A003",
  "*_dto.py: A003",
  "__init__.py: F401",
]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = true
exclude = [
  "docs",
  "tests",
  "migrations",
  ".venv",
]
